--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block title %}
-Pagina de inicio sistema empleados
+Pagina de inicio sistema empleados "CREADO POR JUAN SEPULVEDA"
 {% endblock title %}
 
 {% block content %}
