--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block title %}
-Pagina de inicio sistema empleados "CREADO POR JUAN SEPULVEDA"
+JUAN SEPULVEDA
 {% endblock title %}
 
 {% block content %}
@@ -20,13 +20,13 @@ Pagina de inicio sistema empleados "CREADO POR JUAN SEPULVEDA"
       <li class="is-active orbit-slide">
         <figure class="orbit-figure">
           <img class="orbit-image" src="{% static 'img/img1.jpg' %}" alt="Space">
-          <figcaption class="orbit-caption">Space, the final frontier.</figcaption>
+          <figcaption class="orbit-caption">creado por JUAN SEPULVEDA.</figcaption>
         </figure>
       </li>
       <li class="orbit-slide">
         <figure class="orbit-figure">
           <img class="orbit-image" src="{% static 'img/img2.jpg' %}" alt="Space">
-          <figcaption class="orbit-caption">Lets Rocket!</figcaption>
+          <figcaption class="orbit-caption">aunque muchos no lo crean!</figcaption>
         </figure>
       </li>
     </ul>
