cambios en template

--- a/templates/departamento/new_departamento.html
+++ b/templates/departamento/new_departamento.html
@@ -11,7 +11,7 @@ Registrar Departamento
 
 <div class="grid-container">
     <div class="grid-x">
-        <h1 class="cell">Registrar Empleado</h1>
+        <h1 class="cell">Registrar Departamento</h1>
         <form class="cell callout grid-x grid-margin-x" method="POST" enctype="multipart/form-data"> {% csrf_token %}
 
             <div class="medium-6 cell">
