--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -15,7 +15,7 @@
   </div>
   <div class="top-bar-right">
     <ul class="menu">
-      <li><input type="search" placeholder="Buscar empleado"></li>
+      <!-- <li><input type="search" placeholder="Buscar empleado"></li> -->
       <li><a href="{% url 'persona_app:empleado_add' %}" class="button">Registrar nuevo</a></li>
     </ul>
   </div>
